@@ -1370,6 +1370,7 @@ void CreateImageList(BOOL bInitial)
     hIcon = CreateIcon(g_hInst, 16, 16, 1, 4, NULL, NULL);
     ImageList_AddIcon(myGlobals.g_hImageList, hIcon);
     myGlobals.g_IconEmpty = ImageList_GetIcon(myGlobals.g_hImageList, 0, 0);
+    DestroyIcon(hIcon);
 
     myGlobals.g_IconFileEvent = LoadSkinnedIcon(SKINICON_EVENT_FILE);
     myGlobals.g_IconUrlEvent = LoadSkinnedIcon(SKINICON_EVENT_URL);
